--- a/cover/cover.css
+++ b/cover/cover.css
@@ -35,8 +35,25 @@ body {
   color: #fff;
   text-align: center;
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
-  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+ <!-- -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
           box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+    margin-top: 0px;
+  margin-bottom: 0px;
+    -->
+    
+}
+
+.shadow {
+    position: fixed;
+  top: 0%;
+    bottom: 0%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+    -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+          box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+    
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
@@ -54,6 +71,7 @@ body {
   margin-right: auto;
   margin-left: auto;
     
+    
 }
 
 /* Padding for spacing */
@@ -67,6 +85,8 @@ body {
 .masthead-brand {
   margin-top: 10px;
   margin-bottom: 10px;
+    opacity:0.1;
+    
 }
 
 .masthead-nav > li {
