--- a/cover/cover.css
+++ b/cover/cover.css
@@ -27,15 +27,15 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: #333;
-    
-    
+  background-color: #fff;
+
+
 }
 body {
   color: #fff;
   text-align: center;
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
-    
+
      position: fixed;
   top: 0%;
     bottom: 0%;
@@ -46,12 +46,12 @@ body {
     -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
           box-shadow: inset 0 0 100px rgba(0,0,0,.5);
 
-    
+
 }
 
 .shadow {
-    
-    
+
+
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
@@ -68,8 +68,8 @@ body {
 .cover-container {
   margin-right: auto;
   margin-left: auto;
-    
-    
+
+
 }
 
 /* Padding for spacing */
@@ -84,7 +84,7 @@ body {
   margin-top: 10px;
   margin-bottom: 10px;
     opacity:0.1;
-    
+
 }
 
 .masthead-nav > li {
@@ -136,7 +136,7 @@ body {
 .cover .btn-lg {
   padding: 10px 20px;
   font-weight: bold;
-    
+
 }
 
 
@@ -173,7 +173,7 @@ body {
   .mastfoot,
   .cover-container {
     width: 100%; /* Must be percentage or pixels for horizontal alignment */
-      
+
   }
 }
 
